Fixed poject image spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -137,5 +137,5 @@
 .project-page img{
   max-width: 100%;
   object-fit: scale-down;
-  height: 100%;
+  /* height: 100%; */
 }
